[package]
name = "aws-ip-provisioner-installer"
version = "0.0.55" # https://github.com/ava-labs/ip-manager/releases
edition = "2021"
rust-version = "1.68"
publish = true
description = "aws-ip-provisioner installer"
repository = "https://github.com/ava-labs/ip-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
aws-manager = { version = "0.25.0", features = ["s3"] } # https://crates.io/crates/aws-manager
compress-manager = "0.0.6"
log = "0.4.17"
random-manager = "0.0.5"
reqwest = "0.11.16"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95" # https://github.com/serde-rs/json
tokio = "1.27.0" # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
env_logger = "0.10.0"
