[package]
name = "aws-ip-provisioner"
version = "0.0.76" # https://github.com/ava-labs/ip-manager/releases
edition = "2021"
rust-version = "1.69"
description = "AWS IP provisioner"
repository = "https://github.com/ava-labs/ip-manager"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "aws-ip-provisioner"
path = "src/main.rs"

[dependencies]
aws-manager = { version = "0.26.18", features = ["ec2"] } # https://crates.io/crates/aws-manager
clap = { version = "4.2.4", features = ["cargo", "derive"] }
env_logger = "0.10.0"
log = "0.4.17"
random-manager = "0.0.5"
tokio = { version = "1.28.0", features = ["full"] }
